--- a/#src/index.html
+++ b/#src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>title</title>
+    <title>params</title>
     <link rel="stylesheet" href="libs/font-awesome/fontawesome.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
     <nav>
-        <a class="logo  " href="#">a</a>
+        <a class="logo" href="#">a</a>
         <a class="nav__item nav__item__hover" href="#">Главная</a>
         <a class="nav__item" href="#">легкие</a>
         <a class="nav__item" href="#">средние</a>
@@ -20,16 +20,36 @@
         <button class="nav__item nav__button button" type="button" name="button">Log In</button>
     </nav>
   </div>
-  <!-- <main>
+  <main>
     <div class="container">
-      <header>
+      <header class="main__header">
         <h1>Мы поможем вам изучить параметры</h1>
-        <p>vРазбор задач с параметром, тригонометрическими функциями, с системами и по возможности с несколькими вариантами </p>
-      </header> -->
-      <!-- <img src="img\main\pexels-nothing-ahead-3729557.jpg" alt=""> -->
-    <!-- </div>
-  </main> -->
-
+        <p>Разбор задач с параметром, тригонометрическими функциями, с системами и по возможности с несколькими вариантами </p>
+      </header>
+    </div>
+  </main>
+  <!-- <section class="difficulty">
+    <div class="container">
+      <article class="difficulty__item">
+        <img src="img\difficulty\briefcase.svg" alt="">
+        <h3>Лёгкие</h3>
+        <p>Линейные уравнения, неравенства и системы уравнений с параметрами, исследование дискриминанта и применение теоремы виета, расположение корней квадратного трехчлена относительно данных чисел, квадратные неравенства с параметрами</p>
+        <a href="#">Discover</a>
+      </article>
+      <article class="difficulty__item">
+        <img src="img\difficulty\tool.svg" alt="">
+        <h3>Средние</h3>
+        <p>Задачи, сводящиеся к исследованию квадратного трехчлена, применение монотонности и ограниченности функций к решению уравнений и неравенств, применение инвариантности функций к решению уравнений и систем уравнений</p>
+        <a href="#">Discover</a>
+      </article>
+      <article class="difficulty__item">
+        <img src="img\difficulty\lifeBuoy.svg" alt="">
+        <h3>Тяжёлые</h3>
+        <p>Графический метод: преобразование и построение графиков в системе oxy, графический метод: метод областей, уравнения, неравенства и системы с параметрами</p>
+        <a href="#">Discover</a>
+      </article>
+    </div>
+  </section> -->
 
 
 
