--- a/#src/index.html
+++ b/#src/index.html
@@ -28,28 +28,36 @@
       </header>
     </div>
   </main>
-  <!-- <section class="difficulty">
+  <section class="difficulty">
     <div class="container">
       <article class="difficulty__item">
-        <img src="img\difficulty\briefcase.svg" alt="">
+        <a href="#"><img src="img\difficulty\briefcase.svg" alt=""></a>
         <h3>Лёгкие</h3>
-        <p>Линейные уравнения, неравенства и системы уравнений с параметрами, исследование дискриминанта и применение теоремы виета, расположение корней квадратного трехчлена относительно данных чисел, квадратные неравенства с параметрами</p>
-        <a href="#">Discover</a>
+        <p>Уравнения с параметром</p>
+        <p>Неравенства с параметром</p>
+        <p>Системы с параметром </p>
+        <p>и др.</p>
+        <a href="#">Начать</a>
       </article>
       <article class="difficulty__item">
-        <img src="img\difficulty\tool.svg" alt="">
+        <a href="#"><img src="img\difficulty\tool.svg" alt=""></a>
         <h3>Средние</h3>
-        <p>Задачи, сводящиеся к исследованию квадратного трехчлена, применение монотонности и ограниченности функций к решению уравнений и неравенств, применение инвариантности функций к решению уравнений и систем уравнений</p>
-        <a href="#">Discover</a>
+        <p>Расположение корней квадратного трехчлена</p>
+        <p>Использование симметрий</p>
+        <p>Использование монотонности, оценок</p>
+        <p>и др.</p>
+        <a href="#">Начать</a>
       </article>
       <article class="difficulty__item">
-        <img src="img\difficulty\lifeBuoy.svg" alt="">
+        <a href="#"><img src="img\difficulty\lifeBuoy.svg" alt=""></a>
         <h3>Тяжёлые</h3>
-        <p>Графический метод: преобразование и построение графиков в системе oxy, графический метод: метод областей, уравнения, неравенства и системы с параметрами</p>
-        <a href="#">Discover</a>
+        <p>Аналитическое решение уравнений, неравенств, систем</p>
+        <p>Координаты (x, a)</p>
+        <p>Уравнение окружности</p>
+        <a href="#">Начать</a>
       </article>
     </div>
-  </section> -->
+  </section>
 
 
 
