--- a/#src/index.html
+++ b/#src/index.html
@@ -6,7 +6,11 @@
     <title>params</title>
     <link rel="stylesheet" href="libs/font-awesome/fontawesome.min.css">
     <link rel="stylesheet" href="css/style.min.css">
-
+    <!-- ico -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png">
+    <link rel="manifest" href="/ico/site.webmanifest">
   </head>
   <body>
     <div class="container">
@@ -24,7 +28,7 @@
     <div class="container">
       <header class="main__header">
         <h1>Мы поможем вам изучить параметры</h1>
-        <p>Разбор задач с параметром, тригонометрическими функциями, с системами и по возможности с несколькими вариантами </p>
+        <p>Разбор задач с параметром, тригонометрическими функциями, с системами и по возможности с несколькими вариантами решения</p>
       </header>
     </div>
   </main>
