--- a/#src/index.html
+++ b/#src/index.html
@@ -12,18 +12,25 @@
     <link rel="icon" type="image\png" sizes="16x16" href="ico\favicon-16x16.png">
     <link rel="manifest" href="ico\site.webmanifest">
   </head>
-  <body>
-    <div class="container">
+  <body id="body">
     <nav>
-        <a class="logo" href="#">a</a>
-        <a class="nav__item nav__item__hover" href="#">Главная</a>
-        <a class="nav__item" href="#">легкие</a>
-        <a class="nav__item" href="#">средние</a>
-        <a class="nav__item" href="#">сложные</a>
-        <a class="nav__item" href="#">о нас</a>
-        <button class="nav__item nav__button button" type="button" name="button">Log In</button>
+      <div class="nav--mobile" >
+        <div class="nav__content" id="nav__content">
+          <div class="container">
+            <a class="logo" href="#">a</a>
+            <a class="nav__item nav__item__hover" href="#">Главная</a>
+            <a class="nav__item" href="#">легкие</a>
+            <a class="nav__item" href="#">средние</a>
+            <a class="nav__item" href="#">сложные</a>
+            <a class="nav__item" href="#">о нас</a>
+            <!-- <button class="nav__item nav__button button" type="button" name="button">Log In</button> -->
+          </div>
+        </div>
+        <a href="#" class="menu-btn" id="menu-btn" onclick="burger()">
+          <span></span>
+        </a>
+      </div>
     </nav>
-  </div>
   <main>
     <div class="container">
       <header class="main__header">
