--- a/#src/index.html
+++ b/#src/index.html
@@ -19,7 +19,7 @@
           <div class="container">
             <a class="logo" href="#">a</a>
             <a class="nav__item nav__item__hover" href="#">Главная</a>
-            <a class="nav__item" href="#">легкие</a>
+            <a class="nav__item" href="easy.html">легкие</a>
             <a class="nav__item" href="#">средние</a>
             <a class="nav__item" href="#">сложные</a>
             <a class="nav__item" href="#">о нас</a>
