--- a/#src/index.html
+++ b/#src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>params</title>
+    <title>параметры</title>
     <link rel="stylesheet" href="libs/font-awesome/fontawesome.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <!-- ico -->
@@ -17,12 +17,12 @@
       <div class="nav--mobile" >
         <div class="nav__content" id="nav__content">
           <div class="container">
-            <a class="logo" href="#">a</a>
-            <a class="nav__item nav__item__hover" href="#">Главная</a>
+            <a class="logo" href="index.html">a</a>
+            <a class="nav__item nav__item__hover" href="index.html">Главная</a>
             <a class="nav__item" href="easy.html">легкие</a>
-            <a class="nav__item" href="#">средние</a>
-            <a class="nav__item" href="#">сложные</a>
-            <a class="nav__item" href="#">о нас</a>
+            <a class="nav__item" href="medium.html">средние</a>
+            <a class="nav__item" href="hard.html">сложные</a>
+            <!-- <a class="nav__item" href="#">о нас</a> -->
             <!-- <button class="nav__item nav__button button" type="button" name="button">Log In</button> -->
           </div>
         </div>
