--- a/#src/easy.html
+++ b/#src/easy.html
@@ -37,7 +37,16 @@
             <h2>Задание 1</h2>
             <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
             <p class="task__formula">(2a - 4)x = 3a + 1</p>
-            <button type="button" name="button">Проверить</button>
+          </div>
+          <div class="task__animation">
+            <div class="checkbox">
+              <input type="checkbox" class="checkbox__input" id="checkbox" name="checkbox" value="yes">
+              <label for="checkbox" class="checkbox__label">Решение</label>
+              <span class="checkbox__line checkbox__line--top"></span>
+              <span class="checkbox__line checkbox__line--bottom"></span>
+              <span class="checkbox__line checkbox__line--right"></span>
+              <span class="checkbox__line checkbox__line--left"></span>
+            </div>
           </div>
         </div>
       </section>
