--- a/#src/easy.html
+++ b/#src/easy.html
@@ -42,10 +42,16 @@
             <div class="checkbox">
               <input type="checkbox" class="checkbox__input" id="checkbox" name="checkbox" value="yes">
               <label for="checkbox" class="checkbox__label">Решение</label>
-              <span class="checkbox__line checkbox__line--top"></span>
-              <span class="checkbox__line checkbox__line--bottom"></span>
+              <span class="checkbox__line checkbox__line--top-left"></span>
+              <span class="checkbox__line checkbox__line--top-right"></span>
               <span class="checkbox__line checkbox__line--right"></span>
               <span class="checkbox__line checkbox__line--left"></span>
+              <span class="checkbox__line checkbox__line--bottom"></span>
+            </div>
+            <div class="answer">
+              <span class="answer__line--top"></span>
+              <span class="answer__line--right"></span>
+              <span class="answer__line--left"></span>
             </div>
           </div>
         </div>
