--- a/#src/index.html
+++ b/#src/index.html
@@ -42,30 +42,30 @@
   <section class="difficulty">
     <div class="container">
       <article class="difficulty__item">
-        <a href="#"><img src="img\difficulty\briefcase.svg" alt=""></a>
+        <a href="easy.html"><img src="img\difficulty\briefcase.svg" alt=""></a>
         <h3>Лёгкие</h3>
         <p>Уравнения с параметром</p>
         <p>Неравенства с параметром</p>
         <p>Системы с параметром </p>
         <p>и др.</p>
-        <a href="#">Начать</a>
+        <a href="easy.html">Начать</a>
       </article>
       <article class="difficulty__item">
-        <a href="#"><img src="img\difficulty\tool.svg" alt=""></a>
+        <a href="medium.html"><img src="img\difficulty\tool.svg" alt=""></a>
         <h3>Средние</h3>
         <p>Расположение корней квадратного трехчлена</p>
         <p>Использование симметрий</p>
         <p>Использование монотонности, оценок</p>
         <p>и др.</p>
-        <a href="#">Начать</a>
+        <a href="medium.html">Начать</a>
       </article>
       <article class="difficulty__item">
-        <a href="#"><img src="img\difficulty\lifeBuoy.svg" alt=""></a>
+        <a href="hard.html"><img src="img\difficulty\lifeBuoy.svg" alt=""></a>
         <h3>Тяжёлые</h3>
         <p>Аналитическое решение уравнений, неравенств, систем</p>
         <p>Координаты (x, a)</p>
         <p>Уравнение окружности</p>
-        <a href="#">Начать</a>
+        <a href="hard.html">Начать</a>
       </article>
     </div>
   </section>
