--- a/#src/easy.html
+++ b/#src/easy.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image\png" sizes="32x32" href="ico\favicon-32x32.png">
     <link rel="icon" type="image\png" sizes="16x16" href="ico\favicon-16x16.png">
     <link rel="manifest" href="ico\site.webmanifest">
+
   </head>
   <body id="body">
     <nav>
@@ -32,27 +33,83 @@
       </div>
     </nav>
       <section class="task">
-        <div class="container">
+        <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
             <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
             <p class="task__formula">(2a - 4)x = 3a + 1</p>
           </div>
           <div class="task__animation">
-            <div class="checkbox">
-              <input type="checkbox" class="checkbox__input" id="checkbox" name="checkbox" value="yes">
-              <label for="checkbox" class="checkbox__label">Решение</label>
+            <div class="checkbox" >
+              <input   type="checkbox" id="1" class="checkbox__input" name="checkbox" value="yes">
+              <label for="1" class="checkbox__label">Решение</label>
               <span class="checkbox__line checkbox__line--top-left"></span>
               <span class="checkbox__line checkbox__line--top-right"></span>
               <span class="checkbox__line checkbox__line--right"></span>
               <span class="checkbox__line checkbox__line--left"></span>
               <span class="checkbox__line checkbox__line--bottom"></span>
             </div>
-            <div class="answer">
-              <span class="answer__line--top"></span>
-              <span class="answer__line--right"></span>
-              <span class="answer__line--left"></span>
+          </div>
+        </div>
+        <div class="answer" >
+          <div class="answer__container">
+            <span class="checkbox__line answer__line--top-left"></span>
+            <span class="checkbox__line answer__line--top-right"></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </section>
+      <section class="task">
+        <div class="task__container">
+          <div class="task__item">
+            <h2>Задание 2</h2>
+            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
+            <p class="task__formula">(2a - 4)x = 3a + 1</p>
+          </div>
+          <div class="task__animation" >
+            <div class="checkbox">
+              <input type="checkbox" class="checkbox__input" id="2" name="checkbox" value="yes">
+              <label for="2"  class="checkbox__label">Решение</label>
+              <span class="checkbox__line checkbox__line--top-left"></span>
+              <span class="checkbox__line checkbox__line--top-right"></span>
+              <span class="checkbox__line checkbox__line--right"></span>
+              <span class="checkbox__line checkbox__line--left"></span>
+              <span class="checkbox__line checkbox__line--bottom"></span>
             </div>
+          </div>
+        </div>
+        <div class="answer">
+          <div class="answer__container">
+            <span class="checkbox__line answer__line--top-left"></span>
+            <span class="checkbox__line answer__line--top-right"></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </section>
+      <section class="task">
+        <div class="task__container">
+          <div class="task__item">
+            <h2>Задание 3</h2>
+            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
+            <p class="task__formula">(2a - 4)x = 3a + 1</p>
+          </div>
+          <div class="task__animation" >
+            <div class="checkbox">
+              <input type="checkbox" class="checkbox__input" id="3" name="checkbox" value="yes">
+              <label for="3"  class="checkbox__label">Решение</label>
+              <span class="checkbox__line checkbox__line--top-left"></span>
+              <span class="checkbox__line checkbox__line--top-right"></span>
+              <span class="checkbox__line checkbox__line--right"></span>
+              <span class="checkbox__line checkbox__line--left"></span>
+              <span class="checkbox__line checkbox__line--bottom"></span>
+            </div>
+          </div>
+        </div>
+        <div class="answer">
+          <div class="answer__container">
+            <span class="checkbox__line answer__line--top-left"></span>
+            <span class="checkbox__line answer__line--top-right"></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
       </section>
