--- a/#src/medium.html
+++ b/#src/medium.html
@@ -19,10 +19,10 @@
           <div class="container">
             <a class="logo" href="index.html">a</a>
             <a class="nav__item" href="index.html">Главная</a>
-            <a class="nav__item" href="easy.html">легкие</a>
-            <a class="nav__item nav__item__hover" href="medium.html">средние</a>
+            <a class="nav__item nav__item__hover" href="easy.html">легкие</a>
+            <a class="nav__item" href="medium.html">средние</a>
             <a class="nav__item" href="hard.html">сложные</a>
-            <!-- <a class="nav__item" href="#">о нас</a> -->
+            <!-- <a class="nav__item" href="easy.html">о нас</a> -->
             <!-- <button class="nav__item nav__button button" type="button" name="button">Log In</button> -->
           </div>
         </div>
@@ -31,16 +31,87 @@
         </a>
       </div>
     </nav>
-    <div class="container">
       <section class="task">
-        <div class="task__item">
-          <h2>задание 1</h2>
-          <p class="task__еуче">Решите уравнение при всех значениях параметра а:</p>
-          <p class="task__formula">(2a - 4)x = 3a + 1</p>
-          <button type="button" name="button">проверить</button>
+        <div class="task__container">
+          <div class="task__item">
+            <h2>Задание 1</h2>
+            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
+            <p class="task__formula">(2a - 4)x = 3a + 1</p>
+          </div>
+          <div class="task__animation">
+            <div class="checkbox" >
+              <input   type="checkbox" id="1" class="checkbox__input" name="checkbox" value="yes">
+              <label for="1" class="checkbox__label">Решение</label>
+              <span class="checkbox__line checkbox__line--top-left"></span>
+              <span class="checkbox__line checkbox__line--top-right"></span>
+              <span class="checkbox__line checkbox__line--right"></span>
+              <span class="checkbox__line checkbox__line--left"></span>
+              <span class="checkbox__line checkbox__line--bottom"></span>
+            </div>
+          </div>
+        </div>
+        <div class="answer" >
+          <div class="answer__container">
+            <span class="checkbox__line answer__line--top-left"></span>
+            <span class="checkbox__line answer__line--top-right"></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
         </div>
       </section>
-    </div>
+      <section class="task">
+        <div class="task__container">
+          <div class="task__item">
+            <h2>Задание 2</h2>
+            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
+            <p class="task__formula">(2a - 4)x = 3a + 1</p>
+          </div>
+          <div class="task__animation" >
+            <div class="checkbox">
+              <input type="checkbox" class="checkbox__input" id="2" name="checkbox" value="yes">
+              <label for="2"  class="checkbox__label">Решение</label>
+              <span class="checkbox__line checkbox__line--top-left"></span>
+              <span class="checkbox__line checkbox__line--top-right"></span>
+              <span class="checkbox__line checkbox__line--right"></span>
+              <span class="checkbox__line checkbox__line--left"></span>
+              <span class="checkbox__line checkbox__line--bottom"></span>
+            </div>
+          </div>
+        </div>
+        <div class="answer">
+          <div class="answer__container">
+            <span class="checkbox__line answer__line--top-left"></span>
+            <span class="checkbox__line answer__line--top-right"></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </section>
+      <section class="task">
+        <div class="task__container">
+          <div class="task__item">
+            <h2>Задание 3</h2>
+            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
+            <p class="task__formula">(2a - 4)x = 3a + 1</p>
+          </div>
+          <div class="task__animation" >
+            <div class="checkbox">
+              <input type="checkbox" class="checkbox__input" id="3" name="checkbox" value="yes">
+              <label for="3"  class="checkbox__label">Решение</label>
+              <span class="checkbox__line checkbox__line--top-left"></span>
+              <span class="checkbox__line checkbox__line--top-right"></span>
+              <span class="checkbox__line checkbox__line--right"></span>
+              <span class="checkbox__line checkbox__line--left"></span>
+              <span class="checkbox__line checkbox__line--bottom"></span>
+            </div>
+          </div>
+        </div>
+        <div class="answer">
+          <div class="answer__container">
+            <span class="checkbox__line answer__line--top-left"></span>
+            <span class="checkbox__line answer__line--top-right"></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </section>
     <script src="js\script.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
