--- a/#src/easy.html
+++ b/#src/easy.html
@@ -14,6 +14,9 @@
 
   </head>
   <body id="body">
+    <div id="preloaderOverlay" class="preloader--overlay">
+      <div class="preloader"></div>
+    </div>
     <nav>
       <div class="nav--mobile" >
         <div class="nav__content" id="nav__content">
