--- a/#src/index.html
+++ b/#src/index.html
@@ -13,6 +13,9 @@
     <link rel="manifest" href="ico\site.webmanifest">
   </head>
   <body id="body">
+    <div id="preloaderOverlay" class="preloader--overlay">
+      <div class="preloader"></div>
+    </div>
     <nav>
       <div class="nav--mobile" >
         <div class="nav__content" id="nav__content">
