--- a/#src/hard.html
+++ b/#src/hard.html
@@ -13,15 +13,18 @@
     <link rel="manifest" href="ico\site.webmanifest">
   </head>
   <body id="body">
+    <div id="preloaderOverlay" class="preloader--overlay">
+      <div class="preloader"></div>
+    </div>
     <nav>
       <div class="nav--mobile" >
         <div class="nav__content" id="nav__content">
           <div class="container">
             <a class="logo" href="index.html">a</a>
             <a class="nav__item" href="index.html">Главная</a>
-            <a class="nav__item nav__item__hover" href="easy.html">легкие</a>
+            <a class="nav__item " href="easy.html">легкие</a>
             <a class="nav__item" href="medium.html">средние</a>
-            <a class="nav__item" href="hard.html">сложные</a>
+            <a class="nav__item nav__item__hover" href="hard.html">сложные</a>
             <!-- <a class="nav__item" href="easy.html">о нас</a> -->
             <!-- <button class="nav__item nav__button button" type="button" name="button">Log In</button> -->
           </div>
