--- a/#src/index.html
+++ b/#src/index.html
@@ -11,7 +11,8 @@
     <link rel="icon" type="image\png" sizes="32x32" href="ico\favicon-32x32.png">
     <link rel="icon" type="image\png" sizes="16x16" href="ico\favicon-16x16.png">
     <link rel="manifest" href="ico\site.webmanifest">
-  </head>
+    <!-- fontawesome -->
+<link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">  </head>
   <body id="body">
     <div id="preloaderOverlay" class="preloader--overlay">
       <div class="preloader"></div>
@@ -72,9 +73,12 @@
       </article>
     </div>
   </section>
-
-
-
+  <footer>
+    <div class="footer__item">
+      <h4>Разработка и дизайн сайта:</h4>
+      <p>Цуканников Кирилл <a href="https://github.com/topi768"><i class="fab fa-github"></i></a><a href="https://vk.com/id457776760"><i class="fab fa-vk"></i></a></p>
+    </div>
+  </footer>
     <script src="js\script.min.js"></script>
   </body>
 </html>
