--- a/#src/hard.html
+++ b/#src/hard.html
@@ -115,6 +115,12 @@
           </div>
         </div>
       </section>
+      <footer>
+        <div class="footer__item">
+          <h4>Разработка и дизайн сайта:</h4>
+          <p>Цуканников Кирилл <a href="https://github.com/topi768"><i class="fab fa-github"></i></a><a href="https://vk.com/id457776760"><i class="fab fa-vk"></i></a></p>
+        </div>
+      </footer>
     <script src="js\script.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
