--- a/#src/index.html
+++ b/#src/index.html
@@ -73,6 +73,26 @@
       </article>
     </div>
   </section>
+  <section class="opportunities">
+    <div class="container">
+      <div class="opportunities__item">
+        <img src="img\opportunities\briefcase.svg" alt="">
+        <p>весь контент очень доступен</p>
+      </div>
+      <div class="opportunities__item">
+        <img src="img\opportunities\key.svg" alt="">
+        <p>вы узнаете ключевые моменты в решении задач с параметром</p>
+      </div>
+      <div class="opportunities__item">
+        <img src="img\opportunities\box.svg" alt="">
+        <p>материал постояно обновляется</p>
+      </div>
+      <div class="opportunities__item">
+        <img src="img\opportunities\creditCard.svg" alt="">
+        <p>это всё бесплатно</p>
+      </div>
+    </div>
+  </section>
   <footer>
     <div class="footer__item">
       <h4>Разработка и дизайн сайта:</h4>
