--- a/#src/index.html
+++ b/#src/index.html
@@ -73,6 +73,18 @@
       </article>
     </div>
   </section>
+  <section class="pueChart">
+    <div class="container">
+      <div class="pueChart__title">
+        <h2>Ответ на вопрос "будете ли вы решать задание с параметром на ЕГЭ?" </h2>
+        <small>примите участие в опросе, чтобы получить более точные данные (данные на сайт заполняются в ручную)</small>
+        <button type="button" name="button"><a href="https://forms.gle/XyqhhxicYVq76vRs7">опрос</a></button>
+      </div>
+      <div class="pueChart__pueChar">
+        <canvas  width="400px" height="600px"  id="pueChart" ></canvas>
+      </div>
+    </div>
+  </section>
   <section class="opportunities">
     <div class="container">
       <div class="opportunities__item">
@@ -100,5 +112,38 @@
     </div>
   </footer>
     <script src="js\script.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+      let pueChart = document.querySelector('#pueChart').getContext('2d');
+      pueChart.canvas.parentNode.style.height = '600px';
+      pueChart.canvas.parentNode.style.width = '50%';
+      let myChart = new Chart(pueChart, {
+        type: 'pie',
+        data: {
+          labels: ['да, я собираюсь', 'не буду  их решать','не сдаю профиль'] ,
+          datasets: [{
+            data: [10, 6, 2],
+            backgroundColor: [
+              '#6bd95a',
+              '#4276d7',
+              '#cf4d4d',
+            ],
+            // borderColor: [
+            //   '#4d74bd'
+            // ],
+            // borderWidth: 2
+          }]
+        },
+        options: {
+          maintainAspectRatio: false,
+          layout: {
+              padding: {
+                  // left: 50
+              }
+          }
+        }
+
+      })
+    </script>
   </body>
 </html>
