to do  content in medium

--- a/#src/medium.html
+++ b/#src/medium.html
@@ -92,10 +92,10 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 3</h2>
-            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
-            <p class="task__formula">(2a - 4)x = 3a + 1</p>
+            <p class="task__text">найдите при каких a  ур-е умеет 3 корня</p>
+            <p class="task__formula">$$x^2-8x=2| x-a | - 16$$</p>
           </div>
-          <div class="task__animation" >
+          <div class="task__animation">
             <div class="checkbox">
               <input type="checkbox" class="checkbox__input" id="3" name="checkbox" value="yes">
               <label for="3"  class="checkbox__label">Решение</label>
@@ -111,7 +111,12 @@
           <div class="answer__container">
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              $$x^2-8x + 16 = 2| x-a |$$
+              $$( a - 4)^2 = 2| x-a |$$
+              <p>разобьём это уравнение на 2 функции:</p>
+              $$( a - 4)^2 = 2| x-a |$$
+            </p>
           </div>
         </div>
       </section>
