--- a/#src/hard.html
+++ b/#src/hard.html
@@ -25,6 +25,8 @@
             <a class="nav__item " href="easy.html">легкие</a>
             <a class="nav__item" href="medium.html">средние</a>
             <a class="nav__item nav__item__hover" href="hard.html">сложные</a>
+            <a class="nav__item" href="theoreticalMaterial.html">теория</a>
+
             <!-- <a class="nav__item" href="easy.html">о нас</a> -->
             <!-- <button class="nav__item nav__button button" type="button" name="button">Log In</button> -->
           </div>
