--- a/#src/index.html
+++ b/#src/index.html
@@ -26,6 +26,7 @@
             <a class="nav__item" href="easy.html">легкие</a>
             <a class="nav__item" href="medium.html">средние</a>
             <a class="nav__item" href="hard.html">сложные</a>
+            <a class="nav__item" href="theoreticalMaterial.html">теория</a>
             <!-- <a class="nav__item" href="#">о нас</a> -->
             <!-- <button class="nav__item nav__button button" type="button" name="button">Log In</button> -->
           </div>
