--- a/#src/medium.html
+++ b/#src/medium.html
@@ -132,7 +132,36 @@
               $$x_{в} = \frac{-b}{2a} = \frac{8}{2} = 4$$
               $$y_{в} = (4 - 4)^2 = 0$$
               <p>( 4 ; 0 ) - координаты вершины</p>
-
+              <p>теперь ищем случаи, когда будет 3 корня</p>
+              <p>1)</p>
+              <img src="img\medium\3\yotx.ru.png" alt="">
+              <p>(4;0) - нижняя точка пересечения, подставляем её под уравнение</p>
+              $$y = 2| x - a |$$
+              $$0 = 2| 4 - a |$$
+              $$a = 4$$
+              <p>2)x > a - график сдвигается вправо</p>
+              <img src="img\medium\3\yotx1.ru.png" alt="">
+              $$| x - a | = x - a$$
+              $$y = 2x - 2a $$
+              <p>приравниваем уравнения</p>
+              $$(x - 4)^2 = 2x - 2a$$
+              $$x^2 - 8x + 16 - 2x + 2a = 0$$
+              $$D = 100 - 4(16 + 2a) = 0$$
+              $$100 -64 - 8a = 0$$
+              $$36 = 8a $$
+              $$a = 4.5 $$
+              <p>2)x < a - график сдвигается влево</p>
+              <img src="img\medium\3\yotx2.ru.png" alt="">
+              $$| x - a | = a - x$$
+              $$y = 2a - 2x $$
+              $$x^2 - 8x + 16 = 2a - 2x$$
+              $$x^2 - 6x + 16 - 2a = 0$$
+              $$D = 36 - 4(16 - 2a) = 0$$
+              $$ 36 - 4(16 - 2a) =  0$$
+              $$ 36 - 64 + 2a = 0$$
+              $$ 8a = 28$$
+              $$ a = \frac{28}{8} = 3.5$$
+              <p>Ответ: уравнение умеет три решения при a = 3.5; a = 4; a = 4.5 </p>
             </p>
           </div>
         </div>
