--- a/#src/easy.html
+++ b/#src/easy.html
@@ -129,7 +129,8 @@
               $$ a^2 + 2a -3 = (x - 1)(x + 3)  $$
               $$ x =  \frac{(a - 1)^2}{(x - 1)(x + 3)}$$
               $$ x =  \frac{(a - 1)}{(x + 3)}$$
-              <p>$$Ответ: если \: a = 1, то \: x \in R; если \:a \neq 1, \: x =  \frac{(a - 1)}{(x + 3)} $$</p>
+                $$Ответ: если \: a = 1, то \: x \in R;$$
+                $$ если \:a \neq 1, \: x =  \frac{(a - 1)}{(x + 3)} $$
             </p>
           </div>
         </div>
@@ -138,8 +139,9 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 3</h2>
-            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
-            <p class="task__formula">(2a - 4)x = 3a + 1</p>
+            <small><a href="#">Исследование дискриминанта</a></small>
+            <p class="task__text">При каких значениях параметра а уравнение 2 различных решения?</p>
+            <p class="task__formula">$$ x^2 -ax + 16 = 0 $$</p>
           </div>
           <div class="task__animation" >
             <div class="checkbox">
@@ -157,7 +159,25 @@
           <div class="answer__container">
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              <p>чтобы уравнение имело 2 различных корня, нужно чтобы D > 0. Ищем D</p>
+              <!-- $$ чтобы  \: уравнение \: имело \: 2 \: различных \: корня, \: нужно \: чтобы \: D > 0. Ищем D$$ -->
+              $$D = b^2 - 4ac $$
+              $$D = a^2 - 4 *1 * 16 > 0 $$
+              $$D = a^2 - 64 > 0 $$
+              $$D = a^2  > 64 $$
+              $$\begin{equation*}
+                 \begin{cases}
+                  a \geq 8
+                   \\
+                   a < -8
+                   \\
+                 \end{cases}
+                \end{equation*}
+              $$
+              <p>Ответ:  уравнение умеет  2  корня   при</p>
+              $$   \:  a \in (-\infty ; -8 ) \cup ( 8; +\infty)  $$
+            </p>
           </div>
         </div>
       </section>
