--- a/#src/theoreticalMaterial.html
+++ b/#src/theoreticalMaterial.html
@@ -39,7 +39,8 @@
     </nav>
     <section class="content">
       <div class="container">
-          <h2>лёкгие</h2>
+        <article>
+          <h2>лёгкие</h2>
           <h3>Линейные уравнения</h3>
           <p>Линейные уравнения, неравенства и системы линейных уравнений относятся к числу самых простых задач с параметрами. Поэтому задачи этого раздела являются подготовительными заданиями к решению реальных задач с параметрами, предлагаемых на ЕГЭ.</p>
           <h3>Исследование дискриминанта</h3>
@@ -55,11 +56,11 @@
             $$ ax^2 + bx + c = a(x - x_1)(x - x_2) $$
             <p>Теорема Виета:</p>
             $$ \begin{equation*}
-             \begin{cases}
-               x_1 + x_2 = \frac{-b}{a}
-               \\
-               x_1 * x_2 = \frac{c}{a}
-             \end{cases}
+            \begin{cases}
+            x_1 + x_2 = \frac{-b}{a}
+            \\
+            x_1 * x_2 = \frac{c}{a}
+            \end{cases}
             \end{equation*}
             $$
             <p><strong>Факт 1:</strong> Для того чтобы корни квадратного трехчлена имели
@@ -72,26 +73,26 @@
               <p><strong>Факт 2:</strong>Для того чтобы корни квадратного трехчлена имели разные
                 знаки, необходимо и достаточно выполнения соотношения </p>
                 $$ x_1 * x_2 = \frac{c}{a} < 0;$$
-          </div>
-        <div class="content__item">
+        </article>
+        <article>
           <h2>средние</h2>
           <h3>Графический метод.Решение квадратного уравнения с параметром графическим методом</h3>
           <p>Пример 1 – найти число корней уравнения в зависимости от параметра а:</p>
           $$x(x - 1) = a$$
           <p>Согласно постановке задачи нам не нужно находить значения корней, а только их количество, решаем задачу графическим методом.</p>
-            <p>
+          <p>
             Первым действием необходимо построить график функции стоящей в левой части: y = x(x - 1). График данной функции нам известен – это парабола, ветви направлены вверх, корни ее легко найти: x<sub>1</sub>, x<sub>2</sub>, отсюда можно найти координаты вершины:
             $$x_в = \frac{x_1 + x_2}{2} =  \frac{1}{2}$$
             $$y_в = y\left( \frac{1}{2} \right) =\frac{1}{2}\left( \frac{1}{2} - 1 \right) = -\frac{1}{4}$$
-            </p>
-            <img src="\img\theoreticalMaterial\1\xa.jpg" alt="">
-            <figcaption>$$y = x(x - 1)$$</figcaption>
-            <p>Далее необходимо рассечь график семейством прямых , найти точки пересечения и выписать ответ.</p>
-            <img src="\img\theoreticalMaterial\1\xa2.jpg" alt="">
-            <figcaption>$$y = x(x - 1)$$</figcaption>
-            <p>Глядя на график, выписываем ответ: при a < -0.25 решений нет, при a = -0.25 уравнение имеет единственное решение;
+          </p>
+          <img src="\img\theoreticalMaterial\1\xa.jpg" alt="">
+          <figcaption>$$y = x(x - 1)$$</figcaption>
+          <p>Далее необходимо рассечь график семейством прямых , найти точки пересечения и выписать ответ.</p>
+          <img src="\img\theoreticalMaterial\1\xa2.jpg" alt="">
+          <figcaption>$$y = x(x - 1)$$</figcaption>
+          <p>Глядя на график, выписываем ответ: при a < -0.25 решений нет, при a = -0.25 уравнение имеет единственное решение;
             при a > -0.25 уравнение имеет два решения.</p>
-          </div>
+        </article>
       </div>
     </section>
       <footer>
