medium 1 task to do

--- a/#src/medium.html
+++ b/#src/medium.html
@@ -40,9 +40,8 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
-
-            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
-            <p class="task__formula">(2a - 4)x = 3a + 1</p>
+            <p class="task__text">Найдите наименьшее значение параметра а, при котором функция является неубывающей на всей числовой прямой</p>
+            <p class="task__formula">$$ y = 9 + 7x - 3| ax + 2 | + | ax + 5 | + | x + 1 | $$</p>
           </div>
           <div class="task__animation">
             <div class="checkbox" >
@@ -60,7 +59,9 @@
           <div class="answer__container">
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              $$ Данная функция определена на всей числовой прямой и при любом значении параметра а является кусочно-линейной. Точки  -1, -\frac{ 2 }{ a }, -\frac{ 5 }{ a }$$
+            </p>
           </div>
         </div>
       </article>
