--- a/#src/medium.html
+++ b/#src/medium.html
@@ -36,12 +36,13 @@
         </a>
       </div>
     </nav>
-      <article class="task">
+      <section class="task">
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
-            <p class="task__text">Найдите наименьшее значение параметра а, при котором функция является неубывающей на всей числовой прямой</p>
-            <p class="task__formula">$$ y = 9 + 7x - 3| ax + 2 | + | ax + 5 | + | x + 1 | $$</p>
+
+            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
+            <p class="task__formula">(2a - 4)x = 3a + 1</p>
           </div>
           <div class="task__animation">
             <div class="checkbox" >
@@ -59,13 +60,11 @@
           <div class="answer__container">
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
-            <p>
-              $$ Данная функция определена на всей числовой прямой и при любом значении параметра а является кусочно-линейной. Точки  -1, -\frac{ 2 }{ a }, -\frac{ 5 }{ a }$$
-            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
-      </article>
-      <article class="task">
+      </section>
+      <section class="task">
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 2</h2>
@@ -91,8 +90,8 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
-      </article>
-      <article class="task">
+      </section>
+      <section class="task">
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 3</h2>
@@ -166,7 +165,7 @@
             </p>
           </div>
         </div>
-      </article>
+      </section>
       <footer>
         <div class="footer__item">
           <h4>Разработка и дизайн сайта:</h4>
