ready 1 task medium

--- a/#src/medium.html
+++ b/#src/medium.html
@@ -40,9 +40,9 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
-
-            <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
-            <p class="task__formula">(2a - 4)x = 3a + 1</p>
+            <small><a href="#">монотонность</a></small>
+            <p class="task__text">Найдите наименьшее значение параметра а, при котором функция является неубывающей на всей числовой прямой</p>
+            <p class="task__formula">$$ y = 9 + 7x - 3| ax + 2 | + | ax + 5 | + | x + 1 | $$</p>
           </div>
           <div class="task__animation">
             <div class="checkbox" >
@@ -60,7 +60,38 @@
           <div class="answer__container">
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              <p>Данная функция определена на всей числовой прямой и при
+                любом значении параметра а является кусочно-линейной. Точки</p>
+                $$ -1, -\frac{ 2 } { a }, -\frac{ 5 } { a } $$
+                <p>разбивают числовую прямую на промежутки, на каждом из которых функция
+                  является линейной. Рассмотрим случай a < 0. Тогда</p>
+                  $$ -1 < -\frac{ 2 } { a } < -\frac{ 5 } { a } $$
+                  <p>. При раскрытие модулей получаем:</p>
+                  $$ если  \ x < -1, то \ y = 9 + 7x - 3ax - 6 + ax + 5 - x  - 1 = (6 - 2a)x + 7$$
+                  $$ если  \ -1 \leq x < -\frac{2}{a} , то \ y = 9 + 7x - 3ax - 6 + ax + 5 + x  + 1 = (8 - 2a)x + 9$$
+                  $$ если  \ -\frac{2}{a} \leq x < -\frac{5}{a} , то \ y = 9 + 7x + 3ax + 6 + ax + 5 + x  + 1 = (8 - 4a)x + 21$$
+                  $$ если  \  x \geq  -\frac{5}{a} , то \ y = 9 + 7x + 3ax + 6 - ax - 5 + x  + 1 = (8 + 2a)x + 11$$
+                  <p>Для того чтобы функция не убывала, необходимо и достаточно, чтобы все полученные значения угловых коэффициентов прямых были неотрицательными. Следовательно,</p>
+                  $$
+                  \begin{equation*}
+                     \begin{cases}
+                       a < 0
+                       \\
+                       6 - 2a \geq 0
+                       \\
+                       8 - 2a \geq 0
+                       \\
+                       8 - 4a \geq 0
+                       \\
+                       8 + 2a \geq 0
+                     \end{cases}
+                    \end{equation*}
+                  $$
+                  <p>получаем:</p>
+                  $$ -2 \leq a < 0 $$
+                  <p>Отсюда получаем наименьшее значение параметра, равное -2. Так как по условию задачи нужно найти наименьшее значение а, то случай а > 0 рассматривать не нужно.</p>
+            </p>
           </div>
         </div>
       </section>
